<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/disable"
        android:clickable="false"
        android:contentDescription="@string/logoutBtn"
        android:padding="15dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/uploadButton"
        app:srcCompat="@drawable/exit_icon" />

    <ImageButton
        android:id="@+id/uploadButton"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/disable"
        android:clickable="false"
        android:contentDescription="@string/unggahBtn"
        android:padding="15dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:srcCompat="@drawable/upload_icon" />

    <ImageButton
        android:id="@+id/cariButton"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/cariBtn"
        android:padding="15dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/profileButton"
        app:srcCompat="@drawable/search_icon" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="64dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/disable"
        android:clickable="false"
        android:contentDescription="@string/profilBtn"
        android:padding="15dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:srcCompat="@drawable/profile_icon" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/journall_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/uploadText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:labelFor="@id/uploadButton"
        android:text="@string/unggah"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/uploadButton"
        app:layout_constraintStart_toStartOf="@+id/uploadButton"
        app:layout_constraintTop_toBottomOf="@+id/uploadButton" />

    <TextView
        android:id="@+id/logoutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:labelFor="@id/logoutButton"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/logoutButton"
        app:layout_constraintStart_toStartOf="@+id/logoutButton"
        app:layout_constraintTop_toBottomOf="@+id/logoutButton" />

    <TextView
        android:id="@+id/cariText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:labelFor="@id/cariButton"
        android:text="@string/cari"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/cariButton"
        app:layout_constraintStart_toStartOf="@+id/cariButton"
        app:layout_constraintTop_toBottomOf="@+id/cariButton" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/username"
        android:textColor="@color/primary"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/hellotext"
        app:layout_constraintTop_toTopOf="@+id/hellotext" />

    <TextView
        android:id="@+id/hellotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/hi"
        android:textColor="@color/primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="48dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_horizontal|center_vertical"
        android:minHeight="48dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:labelFor="@id/profileButton"
        android:text="@string/profil"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/profileButton"
        app:layout_constraintStart_toStartOf="@+id/profileButton"
        app:layout_constraintTop_toBottomOf="@+id/profileButton" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15595075" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>